--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - "branch-*"
     tags:
-      - v[0-9][0-9].[0-9][0-9].[0-9][0-9]
+      - v[0-9]+.[0-9]+.[0-9]+a
   workflow_dispatch:
     inputs:
       branch:
@@ -25,53 +25,12 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}-${{ github.event_name }}
   cancel-in-progress: true
 
-defaults:
-  run:
-    shell: bash
-
-permissions:
-  actions: read
-  checks: none
-  contents: read
-  deployments: none
-  discussions: none
-  id-token: write
-  issues: none
-  packages: read
-  pages: none
-  pull-requests: read
-  repository-projects: none
-  security-events: none
-  statuses: none
-
 jobs:
   python-build:
-    runs-on: "linux-amd64-cpu8"
-    container:
-      image: rapidsai/ci-conda:latest
-      env:
-        RAPIDS_BUILD_TYPE: ${{ inputs.build_type || 'branch' }}
-        PARALLEL_LEVEL: ${{ env.PARALLEL_LEVEL }}
-    steps:
-      - uses: aws-actions/configure-aws-credentials@v3
-        with:
-          role-to-assume: ${{ vars.AWS_ROLE_ARN }}
-          aws-region: ${{ vars.AWS_REGION }}
-          role-duration-seconds: 43200 # 12h
-      - uses: actions/checkout@v3
-        with:
-          ref: ${{ inputs.sha }}
-          fetch-depth: 0
-      - name: Standardize repository information
-        run: |
-          echo "RAPIDS_REPOSITORY=${{ github.repository }}" >> "${GITHUB_ENV}"
-          echo "RAPIDS_SHA=$(git rev-parse HEAD)" >> "${GITHUB_ENV}"
-          echo "RAPIDS_REF_NAME=${{ inputs.branch || github.ref_name }}" >> "${GITHUB_ENV}"
-          echo "RAPIDS_NIGHTLY_DATE=${{ inputs.date }}" >> "${GITHUB_ENV}"
-      - name: Python build
-        run: ci/build_python.sh
-        env:
-          GH_TOKEN: ${{ github.token }}
+    secrets: inherit
+    uses: ./.github/workflows/conda-build.yaml
+    with:
+      build_type: ${{ inputs.build_type || 'branch' }}
   upload-conda:
     needs: [python-build]
     secrets: inherit
@@ -82,32 +41,10 @@ jobs:
       date: ${{ inputs.date }}
       sha: ${{ inputs.sha }}
   wheel-build:
-    runs-on: "linux-amd64-cpu8"
-    container:
-      image: rapidsai/ci-wheel:latest
-      env:
-        RAPIDS_BUILD_TYPE: ${{ inputs.build_type || 'branch' }}
-        PARALLEL_LEVEL: ${{ env.PARALLEL_LEVEL }}
-    steps:
-      - uses: aws-actions/configure-aws-credentials@v3
-        with:
-          role-to-assume: ${{ vars.AWS_ROLE_ARN }}
-          aws-region: ${{ vars.AWS_REGION }}
-          role-duration-seconds: 43200 # 12h
-      - uses: actions/checkout@v3
-        with:
-          ref: ${{ inputs.sha }}
-          fetch-depth: 0
-      - name: Standardize repository information
-        run: |
-          echo "RAPIDS_REPOSITORY=${{ github.repository }}" >> "${GITHUB_ENV}"
-          echo "RAPIDS_SHA=$(git rev-parse HEAD)" >> "${GITHUB_ENV}"
-          echo "RAPIDS_REF_NAME=${{ inputs.branch || github.ref_name }}" >> "${GITHUB_ENV}"
-          echo "RAPIDS_NIGHTLY_DATE=${{ inputs.date }}" >> "${GITHUB_ENV}"
-      - name: Python build
-        run: ci/build_wheel.sh
-        env:
-          GH_TOKEN: ${{ github.token }}
+    secrets: inherit
+    uses: ./.github/workflows/wheel-build.yaml
+    with:
+      build_type: ${{ inputs.build_type || 'branch' }}
   wheel-publish:
     needs: wheel-build
     secrets: inherit
