--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -3,7 +3,7 @@ name: pr
 on:
   push:
     branches:
-      - "pull-request/[0-9]+"
+      - 'pull-request/[0-9]+'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -42,35 +42,13 @@ jobs:
     secrets: inherit
     uses: rapidsai/shared-workflows/.github/workflows/checks.yaml@branch-24.02
   conda-python-build:
-    needs: checks
-    runs-on: "linux-amd64-cpu8"
-    container:
-      image: rapidsai/ci-conda:latest
-      env:
-        RAPIDS_BUILD_TYPE: pull-request
-        PARALLEL_LEVEL: ${{ env.PARALLEL_LEVEL }}
-    steps:
-      - uses: aws-actions/configure-aws-credentials@v3
-        with:
-          role-to-assume: ${{ vars.AWS_ROLE_ARN }}
-          aws-region: ${{ vars.AWS_REGION }}
-          role-duration-seconds: 43200 # 12h
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - name: Standardize repository information
-        run: |
-          echo "RAPIDS_REPOSITORY=${{ github.repository }}" >> "${GITHUB_ENV}"
-          echo "RAPIDS_SHA=$(git rev-parse HEAD)" >> "${GITHUB_ENV}"
-          echo "RAPIDS_REF_NAME=${{ github.ref_name }}" >> "${GITHUB_ENV}"
-          echo "RAPIDS_NIGHTLY_DATE=" >> "${GITHUB_ENV}"
-      - name: Python build
-        run: ci/build_python.sh
-        env:
-          GH_TOKEN: ${{ github.token }}
+    secrets: inherit
+    uses: ./.github/workflows/conda-build.yaml
+    with:
+      build_type: pull-request
   conda-python-tests:
     needs: conda-python-build
-    runs-on: "linux-amd64-gpu-v100-latest-1"
+    runs-on: 'linux-amd64-gpu-v100-latest-1'
     container:
       image: rapidsai/ci-conda:latest
       env:
@@ -82,50 +60,29 @@ jobs:
         with:
           role-to-assume: ${{ vars.AWS_ROLE_ARN }}
           aws-region: ${{ vars.AWS_REGION }}
-          role-duration-seconds: 43200 # 12h
-      - uses: actions/checkout@v3
+          role-duration-seconds: 1200 # 20 minutes
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - name: Standardize repository information
-        run: |
-          echo "RAPIDS_REPOSITORY=${{ github.repository }}" >> "${GITHUB_ENV}"
-          echo "RAPIDS_SHA=$(git rev-parse HEAD)" >> "${GITHUB_ENV}"
-          echo "RAPIDS_REF_NAME=${{ github.ref_name }}" >> "${GITHUB_ENV}"
-          echo "RAPIDS_NIGHTLY_DATE=" >> "${GITHUB_ENV}"
+        uses: rapidsai/shared-actions/rapids-github-info@main
+        with:
+          repo: ${{ inputs.repo }}
+          branch: ${{ inputs.branch }}
+          date: ${{ inputs.date }}
+          sha: ${{ inputs.sha }}
       - name: Python tests
         run: ci/test_python.sh
         env:
           GH_TOKEN: ${{ github.token }}
   wheel-build:
-    needs: checks
-    runs-on: "linux-amd64-cpu8"
-    container:
-      image: rapidsai/ci-wheel:latest
-      env:
-        RAPIDS_BUILD_TYPE: pull-request
-        PARALLEL_LEVEL: ${{ env.PARALLEL_LEVEL }}
-    steps:
-      - uses: aws-actions/configure-aws-credentials@v3
-        with:
-          role-to-assume: ${{ vars.AWS_ROLE_ARN }}
-          aws-region: ${{ vars.AWS_REGION }}
-          role-duration-seconds: 43200 # 12h
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - name: Standardize repository information
-        run: |
-          echo "RAPIDS_REPOSITORY=${{ github.repository }}" >> "${GITHUB_ENV}"
-          echo "RAPIDS_SHA=$(git rev-parse HEAD)" >> "${GITHUB_ENV}"
-          echo "RAPIDS_REF_NAME=${{ github.ref_name }}" >> "${GITHUB_ENV}"
-          echo "RAPIDS_NIGHTLY_DATE=" >> "${GITHUB_ENV}"
-      - name: Python build
-        run: ci/build_wheel.sh
-        env:
-          GH_TOKEN: ${{ github.token }}
+    secrets: inherit
+    uses: ./.github/workflows/wheel-build.yaml
+    with:
+      build_type: pull-request
   wheel-tests:
     needs: wheel-build
-    runs-on: "linux-amd64-gpu-v100-latest-1"
+    runs-on: 'linux-amd64-gpu-v100-latest-1'
     container:
       image: rapidsai/ci-wheel:latest
       env:
@@ -137,16 +94,17 @@ jobs:
         with:
           role-to-assume: ${{ vars.AWS_ROLE_ARN }}
           aws-region: ${{ vars.AWS_REGION }}
-          role-duration-seconds: 43200 # 12h
-      - uses: actions/checkout@v3
+          role-duration-seconds: 1200 # 20 minutes
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - name: Standardize repository information
-        run: |
-          echo "RAPIDS_REPOSITORY=${{ github.repository }}" >> "${GITHUB_ENV}"
-          echo "RAPIDS_SHA=$(git rev-parse HEAD)" >> "${GITHUB_ENV}"
-          echo "RAPIDS_REF_NAME=${{ github.ref_name }}" >> "${GITHUB_ENV}"
-          echo "RAPIDS_NIGHTLY_DATE=" >> "${GITHUB_ENV}"
+        uses: rapidsai/shared-actions/rapids-github-info@main
+        with:
+          repo: ${{ inputs.repo }}
+          branch: ${{ inputs.branch }}
+          date: ${{ inputs.date }}
+          sha: ${{ inputs.sha }}
       - name: Python tests
         run: ci/test_wheel.sh
         env:
