--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -42,6 +42,7 @@ jobs:
     secrets: inherit
     uses: rapidsai/shared-workflows/.github/workflows/checks.yaml@branch-24.02
   conda-python-build:
+    needs: checks
     secrets: inherit
     uses: ./.github/workflows/conda-build.yaml
     with:
@@ -76,6 +77,7 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
   wheel-build:
+    needs: checks
     secrets: inherit
     uses: ./.github/workflows/wheel-build.yaml
     with:
