--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,7 +36,7 @@ jobs:
       date: ${{ inputs.date }}
       sha: ${{ inputs.sha }}
       # Package is pure Python and only ever requires one build.
-      matrix_filter: 'map(select((.LINUX_VER | test("centos")|not))) | sort_by((.PY_VER | split(".") | map(tonumber))) | [.[-1] + {ARCH: "amd64"}]'
+      matrix_filter: 'map(select(.ARCH == "amd64")) | map(select((.LINUX_VER | test("centos")|not))) | sort_by(.PY_VER | split(".") | map(tonumber)) | .[-1]'
   upload-conda:
     needs: conda-python-build
     secrets: inherit
@@ -56,7 +56,7 @@ jobs:
       date: ${{ inputs.date }}
       script: ci/build_wheel.sh
       # Package is pure Python and only ever requires one build.
-      matrix_filter: 'map(select((.LINUX_VER | test("centos")|not))) | sort_by((.PY_VER | split(".") | map(tonumber))) | [.[-1] + {ARCH: "amd64"}]'
+      matrix_filter: 'map(select(.ARCH == "amd64")) | map(select((.LINUX_VER | test("centos")|not))) | sort_by(.PY_VER | split(".") | map(tonumber)) | .[-1]'
   wheel-publish:
     needs: wheel-build
     secrets: inherit
