--- a/conda/recipes/jupyterlab-nvdashboard/meta.yaml
+++ b/conda/recipes/jupyterlab-nvdashboard/meta.yaml
@@ -1,6 +1,4 @@
-{% set version = environ.get('GIT_DESCRIBE_TAG', '0.0.0.dev').lstrip('v') %}
-{% set minor_version =  version.split('.')[0] + '.' + version.split('.')[1] %}
-{% set py_version=environ.get('CONDA_PY', 37) %}
+{% set version = environ['RAPIDS_PACKAGE_VERSION'].lstrip('v') %}
 {% set date_string = environ['RAPIDS_DATE_STRING'] %}
 
 package:
@@ -15,22 +13,19 @@ build:
   string: py_{{ date_string }}_{{ GIT_DESCRIBE_HASH }}_{{ GIT_DESCRIBE_NUMBER }}
   script: python -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv
   noarch: python
-  script_env:
-    - NODE_OPTIONS=--openssl-legacy-provider
 
 requirements:
   host:
-    - python >=3.7
+    - python >=3.8
     - setuptools
-    - pynvml
-    - psutil
-    - nodejs !=16.10.0
-    - jupyter-packaging >=0.7.0,<0.8
+    - nodejs =18
+    - hatchling
+    - hatch-nodejs-version
+    - hatch-jupyter-builder
+    - jupyterlab >=4
   run:
-    - python >=3.7
-    - jupyterlab >=3.0.0,<4
-    - jupyter-server-proxy >=1.3.2
-    - bokeh >2.1
+    - python >=3.8
+    - jupyterlab >=4
     - pynvml
     - psutil
 
@@ -38,9 +33,6 @@ requirements:
 test:
   imports:
     - jupyterlab_nvdashboard
-  commands:
-    - test -f ${PREFIX}/share/jupyter/labextensions/jupyterlab-nvdashboard/package.json                              # [unix]
-    - if exist %PREFIX%\\share\\jupyter\\labextensions\\jupyterlab-nvdashboard\\package.json (exit 0) else (exit 1)  # [win]
 
 about:
   home: https://rapids.ai
