--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "@jupyterlab/coreutils": "^6.0.0",
         "@jupyterlab/launcher": "^4.0.5",
         "@jupyterlab/services": "^7.0.0",
+        "@jupyterlab/settingregistry": "^4.1.0",
         "d3-format": "^3.1.0",
         "d3-scale": "^4.0.2",
         "react": "^18.2.0",
