--- a/pyproject.toml
+++ b/pyproject.toml
@@ -114,3 +114,11 @@ force-exclude = '''
     package.json
 )/
 '''
+
+[tool.pydistcheck]
+select = [
+    "distro-too-large-compressed",
+]
+
+# PyPI limit is 100 MiB, fail CI before we get too close to that
+max_allowed_size_compressed = '75M'
