--- a/conda/environments/all_arch-any.yaml
+++ b/conda/environments/all_arch-any.yaml
@@ -10,7 +10,7 @@ dependencies:
 - nodejs=18
 - pre-commit
 - psutil
-- pynvml
+- pynvml>=11.0.0,<12.0.0a0
 - pytest
 - pytest-asyncio
 - pytest-jupyter[server]>=0.6.0
